--- a/_layouts/default.html
+++ b/_layouts/default.html
@@ -21,7 +21,6 @@ layout: compress
 
   <div class="page__footer">
     <footer>
-      {% include footer/custom.html %}
       {% include footer.html %}
     </footer>
   </div>
@@ -31,3 +30,5 @@ layout: compress
 </body>
 
 </html>
+
+<!-- {% include footer/custom.html %} -->
