--- a/_layouts/default.html
+++ b/_layouts/default.html
@@ -21,6 +21,7 @@ layout: compress
 
   <div class="page__footer">
     <footer>
+      {% include footer/custom.html %}
       {% include footer.html %}
     </footer>
   </div>
@@ -30,5 +31,3 @@ layout: compress
 </body>
 
 </html>
-
-<!-- {% include footer/custom.html %} -->
